# cmake-study

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  note.md
-code-tool/: CMakeLists.txt
-package/: CMakeLists.txt
1-cmake-lang/: CMakeLists.txt
1-cmake-lang/a-sub-proj/: CMakeLists.txt
2-cmake-system/: CMakeLists.txt
2-cmake-system/_test_code/: test_code_1.cpp
2-cmake-system/config-file/: use_foo.cpp
3-project-target/: CMakeLists.txt  dog-lib.cpp  dog-lib.h  dog-test.cpp  main.cpp
3-project-target/cat/: cat.cpp
3-project-target/dog-lib/: dog-lib.h
4-compiler-config/: CMakeLists.txt  hello.cpp
4-compiler-config/inc/: calc.h
5-find/: CMakeLists.txt
5-find-package/: CMakeLists.txt  hello_test.cpp
5-find-package/empty-lib/: myemptyConfig.cmake  myemptyConfigVersion.cmake
5-test/: CMakeLists.txt
6-code-tool/: CMakeLists.txt
6-install/: CMakeLists.txt  Config.cmake.in  api.h  welcome.cpp
6-install-test-export/: CMakeLists.txt  Config.cmake.in  some_app_consume_the_install.cpp  welcome.cpp
6-install-test-pack/: CMakeLists.txt  welcome.cpp
7-import-export/: CMakeLists.txt  manual_import.cpp  test_mathlib.cpp  test_mathutil.cpp
7-import-export/mathlib/: CMakeLists.txt  Config.cmake.in  Config_Component.cmake.in  mathlib.cpp  mathlib.h  mathutil.cpp  mathutil.h
7-import-export/mathlib/math_symbol/: math_symbol.h
7-package/calc-lib/: CMakeLists.txt  calc.cpp  calc.h
8-module-utils/: CMakeLists.txt
tuts/1-basic/: CMakeLists.txt  CMakePresets.json  main.cpp
tuts/2-libs/: CMakeLists.txt  main.cpp
tuts/2-libs/h-lib/: hlib.h
tuts/2-libs/yi-lib/: yilib.cpp
tuts/2-libs/yi-lib/include/: yilib.h
x-cmake-official-tut/: CMakeLists.txt
x-cmake-official-tut/MathFunctions/: CMakeLists.txt
x-sanitizer/: CMakeLists.txt  main.cpp
yi-cmake-utils/: IO.cmake
